# Luddy-Hackathon-Spring-2025

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
client/: Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
client/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
client/src/app/interviews/: page.tsx
client/src/app/test_api/: page.tsx
client/src/components/: dashboard.tsx  interview-history.tsx  navbar.tsx  new-interview-button.tsx  new-interview-modal.tsx  voice-settings-dialog.tsx
client/src/components/ui/: dialog.tsx
client/src/constants/: feedback.ts  interview.ts
client/src/services/: ai-interview-service.ts
client/src/types/: feedback.ts  interview.ts
client/src/utils/: formatting.ts  interview.ts  score.ts  transformFeedback.ts  useFadeIn.ts
server/: .gitignore  Dockerfile  app.py  coach.py  database.db  feedback_service.py  job_data.json  llm.py  main.py  personas.py  pyproject.toml  requirements.txt  scraping.py  transcription.py  whisper_service.py
server/models/: model_inference.py  model_training.py
server/personas/: jeff.txt  karen.txt  todd.txt
server/prompts/: feedback.tmpl  follow_up.tmpl  technical_questions.tmpl
server/src/: coach.py  llm.py  main.py  transcription.py
server/static/prompts/: behavioral_questions.tmpl  closer.tmpl  feedback.tmpl  introduction.tmpl  wrap_up.tmpl
server/tests/: test_api.py  test_models.py
server/utils/: database.py  helpers.py  scraper.py
(+2 files in other folders)
