[project]
name = "server"
version = "0.1.0"
requires-python = "==3.11.9"
dependencies = [
    "cloudscraper>=1.2.71",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "lxml>=5.3.2",
    "mediapipe>=0.10.14",
    "numpy>=2.1.3",
    "ollama>=0.4.7",
    "openai-whisper>=20240930",
    "opencv-python>=4.11.0.86",
    "pyannote-audio>=3.3.2",
    "pypdf>=5.4.0",
    "torch>=2.6.0",
]
